//
// Copyright 2023 The Project Oak Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package oak.session.noninteractive.v1;

option java_multiple_files = true;
option java_package = "oak.session.noninteractive.v1";

message CryptoRequest {
  // Request message body.
  bytes body = 1;

  // Symmetric key that should be used for encrypting the response.
  bytes response_key = 2;
}

message CryptoResponse {
  // Response message body.
  bytes body = 1;
}
